--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
             <!--<version>8.2.1</version>-->
         <!--</dependency>-->
 
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
