--- a/src/main/resources/geode-server.properties
+++ b/src/main/resources/geode-server.properties
@@ -5,3 +5,4 @@ statistic-sampling-enabled=true
 statistic-archive-file=myStatisticsArchiveFile.gfs
 archive-disk-space-limit=1000
 archive-file-size-limit=100
+locators=localhost[11111]
